# glyph-subnet

./: .env.example  .env.example_miners  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  chain.toml  pyproject.toml
.github/workflows/: ci.yml
docker/: glyph-runner-default.Dockerfile
docs/: ARCHITECTURE.md  CODEC_SANDBOX_HARDENING.md  MINING.md  VALIDATING.md  reign-and-burn.md
miner/: __init__.py  __main__.py  check.py  cli.py  commit.py  env.py  publish.py  register.py
reference_codec/: compress.py  decompress.py  manifest.json
scripts/: cleanup_state.sh  create_genesis_king.py  deploy_runner_chute.sh  install_deps.sh  orchestrate_koth.py  run_auto_validator.sh  scrape_fresh_corpus.py  setup_hooks.sh  smoke_chute.py
tests/: test_artifact.py  test_burn_schedule.py  test_chain.py  test_chute_contract.py  test_chutes_key.py  test_commitments.py  test_constants.py  test_conviction.py  test_crown_retention.py  test_decide_weights.py  test_evaluate_round_live_corpus.py  test_evaluator_state.py  test_glyph_eval_runner.py  test_host_unavailable.py  test_live_bench.py  test_live_corpus.py  test_log_config.py  test_oracle.py  test_precheck.py  test_reign_worker_run_round.py  test_reign_worker_service.py  test_round_corpus.py  test_round_corpus_cache.py  test_round_corpus_provider.py  test_runner_chutes_payload.py  test_runner_docker.py  test_runner_docker_hardening.py  test_runner_docker_warmup.py  test_runner_local.py  test_runner_sandbox.py  test_salt.py  test_scoring.py  test_scoring_version.py  test_state.py  test_streams_corpus.py  test_validator_logic.py  test_version_key.py  test_wandb_logger.py  test_weights.py  test_winner_commitment.py
(+56 files in other folders)
