[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glyph-subnet"
version = "1.3.0"
description = "Glyph: lossless neural text-compression Bittensor subnet (decentralized Hutter Prize)"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10,<3.13"
dependencies = [
  "bittensor>=10.4.1,<11",  # >=10.4.1: hotkey conviction/lock queries (issue #156); <11: see #146/#147
  "huggingface-hub>=0.24.0",
  "pydantic>=2.8.0",
  "zstandard>=0.22.0",
  "requests>=2.31.0",
  "wandb>=0.17.0",
  # Every validator streams its own round corpus straight from HuggingFace (issue #71) --
  # no longer an owner-only optional extra.
  "datasets>=2.19.0",
]

[project.optional-dependencies]
# The Chutes SDK is only needed to deploy/run the serverless evaluation chute.
chutes = ["chutes>=0.2.0"]
dev = ["pytest>=8.0.0", "ruff>=0.5.0", "pre-commit>=3.7.0"]

[project.scripts]
glyph-validator = "validator.service:main"
glyph-weight-setter = "weight_setter.service:main"
glyph-reign-worker = "reign_worker.service:main"
glyph-chain-reader = "chain.reader:main"
glyph-deploy-chute = "eval.deploy:main"
glyph-miner = "miner.cli:main"
glyph-check-model = "miner.check:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = [
  "core*",
  "chain*",
  "validation*",
  "eval*",
  "weight_setter*",
  "reign_worker*",
  "validator*",
  "miner*",
]
namespaces = false

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
